--- a/package.json
+++ b/package.json
@@ -1,53 +1,38 @@
 {
-  "name": "orca-frontend",
-  "version": "0.1.0",
+  "name": "orca",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start -p 4001",
-    "tsc": "tsc",
-    "lint": "next lint",
-    "ts:check": "tsc -p tsconfig.json --noEmit"
+    "build": "lerna run build",
+    "dev": "lerna run dev --stream",
+    "prepare": "husky install",
+    "lint": "lerna run lint",
+    "ts:check": "lerna run ts:check",
+    "create-super-admin": "node ./packages/orca-api/createSuperAdmin.js"
   },
+  "workspaces": [
+    "packages/*"
+  ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/dimimikadze/orca",
-    "directory": "packages/orca-frontend"
+    "url": "https://github.com/dimimikadze/orca.git"
   },
-  "dependencies": {
-    "axios": "^0.21.1",
-    "deepmerge": "^4.2.2",
-    "dompurify": "^3.0.6",
-    "linkify-it": "^3.0.3",
-    "next": "^12.1.0",
-    "nprogress": "^0.2.0",
-    "polished": "^4.0.5",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-movable": "^2.5.4",
-    "react-query": "^3.9.8",
-    "react-redux": "^7.2.2",
-    "react-share": "^4.4.0",
-    "redux": "^4.0.5",
-    "socket.io-client": "^3.1.1",
-    "styled-components": "^5.3.0",
-    "uuid": "^8.3.2"
+  "bugs": {
+    "url": "https://github.com/dimimikadze/orca/issues"
+  },
+  "engines": {
+    "node": ">=12.20.0"
   },
   "devDependencies": {
-    "@types/linkify-it": "^3.0.2",
-    "@types/lodash": "^4.14.166",
-    "@types/node": "^14.14.36",
-    "@types/react": "^17.0.0",
-    "@types/styled-components": "^5.1.7",
-    "@typescript-eslint/eslint-plugin": "^4.11.0",
-    "@typescript-eslint/parser": "^4.11.0",
-    "babel-plugin-styled-components": "^1.12.0",
-    "eslint": "^7.31.0",
-    "eslint-config-next": "^11.0.1",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-react": "^7.21.5",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "typescript": "^4.2.3"
-  }
+    "husky": "^7.0.1",
+    "lerna": "^3.22.1",
+    "lint-staged": "^11.1.0",
+    "prettier": "^2.1.2"
+  },
+  "lint-staged": {
+    "**/*.{ts,tsx,js,jsx,md,json,html}": [
+      "prettier --write"
+    ]
+  },
+  "license": "MIT"
 }
